# openai-apps-sdk-examples

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build-all.mts  package.json  pnpm-lock.yaml  test-runner.ts  tsconfig.app.json  vite.config.mts
.storybook/: main.ts  preview.tsx  tsconfig.json
.storybook/openai-addon/: Panel.tsx  Toolbar.tsx  preview-hooks.ts  register.tsx
docs/: storybook-integration-plan.md  storybook-openai-toolbar-plan.md  widgets-manifest-plan.md  widgets-manifest.md
pizzaz_server_node/src/: server.ts
pizzaz_server_rust/: .gitignore  Cargo.toml  README.md
pizzaz_server_rust/src/: handler.rs  lib.rs  main.rs  test_helpers.rs  types.rs  widgets.rs  widgets_manifest.rs
pizzaz_server_rust/tests/: integration_test.rs
pizzaz_server_rust/tests/common/: mod.rs
pizzaz_server_rust/tests/fixtures/: pizzaz-albums.html  pizzaz-carousel.html  pizzaz-list.html  pizzaz-map.html  pizzaz-video.html  widgets.json
scripts/: refresh-widgets.mjs  update-pizzaz-server-assets.mts
src/pizzaz-list/: PizzazListApp.stories.tsx  PizzazListApp.tsx  index.tsx
src/testing/: fixtures.ts  openai-addon-channel.ts  openai-storybook.tsx
