[package]
name = "pizzaz_server_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
bytes = "1"
http = "0.2"
http-body = "1"
http-body-util = "0.1"
futures = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
subtle = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
mime = "0.3"
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "pizzaz_server_rust"
path = "src/main.rs"

[lib]
name = "pizzaz_server_rust"
path = "src/lib.rs"
